deploy/network/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${CI_PROJECT_NAME}-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET,POST,OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Client-Authorization"
spec:
  rules:
    - http:
        paths:
          - path: ${PUBLISH_PATH}(/|$)(.*)
            backend:
              serviceName: ${CI_PROJECT_NAME}
              servicePort: ${APP_PORT}
      host: kube.1cb.kz
